# notion-mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  SETUP.md  pyproject.toml  requirements.txt  server.json
.github/workflows/: test.yml
notion_mcp/: __init__.py  audit.py  client.py  drafts.py  server.py
tests/: test_basic.py
