[project]
name = "notion-mcp"
version = "0.1.0"
description = "Notion API (v1) access for Claude. Local-first FastMCP server: read pages/blocks/databases/users/comments + draft+confirm-gated writes, 4-field per-call audit, SSRF-guarded HTTP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Adelaida Diaz-Roa" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "fastmcp",
    "anthropic",
    "claude",
    "notion",
    "notion-api",
    "docs",
    "database",
    "knowledge-base",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=3.2.4",
    "httpx>=0.27",
    "mycelium-security @ git+https://github.com/adelaidasofia/mycelium-security.git@v0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://diazroa.com"
Repository = "https://github.com/adelaidasofia/notion-mcp"
Issues = "https://github.com/adelaidasofia/notion-mcp/issues"

[project.scripts]
notion-mcp = "notion_mcp.server:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["notion_mcp*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501"]
